--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - wrapt 
     - m2w64-toolchain  # [win]
     - libgfortran  # [unix]
+    - libgcc  # [linux]
     - xarray
 
 test:
