--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,9 +10,9 @@ source:
   sha256: 7038de3e8cf77147cfafaa41e9797521dd1b4bff9130baacd25850ae38a7c3a3 
 
 build:
-  number: 1
+  number: 2 
   detect_binary_files_with_prefix: true
-  skip: True  # [win32 or np>=112 or (win and py>=35)]
+  skip: True  # [win32 or (np>=112 and win) or (win and py>=35)]
 
 requirements:
   build:
