trying to get win32 to work, do not merge this

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   number: 2 
   detect_binary_files_with_prefix: true
-  skip: True  # [win32 or (np>=112 and win) or (win and py>=35)]
+  skip: True  # [not win32]
 
 requirements:
   build:
