--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: e93450623f4173e8cbd339ef9a7c25b25af1a9ff2340e962699b12ba99ce7c5d 
 
 build:
-  number: 0
+  number: 1 
   detect_binary_files_with_prefix: true
   skip: True  # [(win and py>=35)]
 
@@ -29,6 +29,7 @@ requirements:
     - mingwpy  # [win]
     - libgfortran  # [unix]
     - libgcc  # [unix]
+    - xarray
 
 test:
   requires:
