--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.0.3" %}
+{% set version = "1.0.4" %}
 
 package:
   name: wrf-python
@@ -7,12 +7,12 @@ package:
 source:
   fn: wrf-python-{{ version }}.tar.gz
   url: https://github.com/NCAR/wrf-python/archive/{{ version }}.tar.gz
-  sha256: 96ed61cd081e47c2d9e5b7788ea797e5d2e18b0e7d24ae1d7b74003d1b47cdc6 
+  sha256: 303da6607ac66f49b6d011c32c0bf3af9b5ea5cb6563448daafafb8ec9a078d1 
 
 build:
   number: 0 
   detect_binary_files_with_prefix: true
-  skip: True  # [np > 112 or (win and py>=35)]
+  skip: True  # [(win and py>=35)]
 
 requirements:
   build:
