--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,7 +47,7 @@ test:
 about:
   home: https://github.com/NCAR/wrf-python
   license: "Apache-2.0"
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: LICENSE
   summary: "Diagnostic and interpolation routines for WRF-ARW data."
 
 extra:
