--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,8 @@ requirements:
     - setuptools
     - python
     - numpy  # [unix]
-    - numpy 1.14.*  # [win]
+    - numpy 1.14.*  # [win and py<38]
+    - numpy 1.17.*  # [win and py38]
     - wrapt
   run:
     - setuptools
