use numpy=1.18 for all win

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,7 @@ requirements:
     - setuptools
     - python
     - numpy  # [unix]
-    - numpy 1.14.*  # [win and py<38]
-    - numpy 1.18.*  # [win and py38]
+    - numpy 1.18.*  # [win]
     - wrapt
   run:
     - setuptools
