--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
   host:
     - setuptools
     - python
-    - numpy  # [unix]
+    - numpy 1.17.* # [unix]
     - numpy 1.14.*  # [win]
     - wrapt
   run:
