--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - wrapt
   run:
     - setuptools
-    - {{ pin_compatible('numpy') }}
+    - numpy=1.19.5
     - python
     - wrapt
     - xarray
