--- a/.ci_support/win_64_numpy1.18python3.8.____cpython.yaml
+++ b/.ci_support/win_64_numpy1.18python3.8.____cpython.yaml
@@ -1,11 +1,13 @@
 c_compiler:
 - vs2017
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 m2w64_fortran_compiler:
 - m2w64-toolchain
+numpy:
+- '1.18'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -14,3 +16,6 @@ python:
 - 3.8.* *_cpython
 target_platform:
 - win-64
+zip_keys:
+- - python
+  - numpy
