--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,8 +20,7 @@ requirements:
     - setuptools
     - python
     - pip
-    - numpy  # [not win]
-    - numpy 1.14.*  # [win]
+    - numpy
   run:
     - {{ pin_compatible('numpy') }}
     - python
