Update maintainers in meta.yaml

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,6 +49,5 @@ about:
 extra:
   recipe-maintainers:
     - akrherz
-    - michaelavs
     - erogluorhan
-    - marodrig # M. Rodriguez https://github.com/marodrig
+    - kafitzgerald
