--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,6 +7,8 @@ package:
 source:
   url: https://github.com/NCAR/wrf-python/archive/v{{ version }}.tar.gz
   sha256: 334aa79ce3c608ca064c55491f249dd7c039ab22e20324a9e16d9ea015ce1fae
+  patches:
+    - gh242.patch
 
 build:
   number: 6
