--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - {{ stdlib("c") }}
   host:
     - setuptools
+    - pip
     - python
     - numpy
     # upstream has it as a requirement
