add cmake and make build deps

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,8 @@ requirements:
     - {{ compiler('m2w64_fortran') }}  # [win]
     - {{ compiler('c') }}
     - {{ stdlib("c") }}
+    - cmake
+    - make
   host:
     - setuptools
     - pip
