--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,9 +17,11 @@ build:
 requirements:
   build:
     - {{ compiler('fortran') }}  # [unix]
+    - {{ stdlib("c") }}  # [unix]
+    - {{ compiler('c') }}  # [unix]
     - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ compiler('c') }}
-    - {{ stdlib("c") }}
+    - {{ stdlib('m2w64_c') }}  # [win]
+    - {{ compiler('m2w64_c') }}  # [win]
     - cmake
     - make
   host:
