--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,9 @@ requirements:
     - {{ compiler('m2w64_fortran') }}  # [win]
     - {{ stdlib('m2w64_c') }}  # [win]
     - {{ compiler('m2w64_c') }}  # [win]
+    - ninja  # [win]
     - cmake
-    - make
+    - make  # [unix]
   host:
     - setuptools
     - pip
