try vanilla compilers on windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,20 +11,14 @@ source:
 build:
   number: 0
   detect_binary_files_with_prefix: true
-  script_env:
-    - FC=gfortran  # [win]
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   skip: true  # [py==313]
 
 requirements:
   build:
-    - {{ compiler('fortran') }}  # [unix]
-    - {{ stdlib("c") }}  # [unix]
-    - {{ compiler('c') }}  # [unix]
-    - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ stdlib('m2w64_c') }}  # [win]
-    - {{ compiler('m2w64_c') }}  # [win]
-    - ninja  # [win]
+    - {{ compiler('fortran') }}
+    - {{ stdlib("c") }}
+    - {{ compiler('c') }}
     - cmake
     - make  # [unix]
   host:
