add ninja back for win, sorry

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - {{ compiler('c') }}
     - cmake
     - make  # [unix]
+    - ninja  # [win]
   host:
     - setuptools
     - pip
