--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,8 @@ build:
   number: 0
   detect_binary_files_with_prefix: true
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  script_env:
+    - SKBUILD_CONFIGURE_OPTIONS=-DCMAKE_Fortran_COMPILER=gfortran
   skip: true  # [py==313]
 
 requirements:
