--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,18 +12,25 @@ build:
   number: 0
   detect_binary_files_with_prefix: true
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  script_env:
-    - SKBUILD_CMAKE_ARGS=-DCMAKE_Fortran_COMPILER=flang  # [win]
+  # script_env:
+  #  - SKBUILD_CMAKE_ARGS=-DCMAKE_Fortran_COMPILER=flang  # [win]
   skip: true  # [py==313]
 
 requirements:
   build:
-    - {{ compiler('fortran') }}
-    - {{ stdlib("c") }}
-    - {{ compiler('c') }}
+    - {{ compiler('fortran') }}  # [unix]
+    - {{ stdlib("c") }}  # [unix]
+    - {{ compiler('c') }}  # [unix]
     - cmake
     - make  # [unix]
     - ninja  # [win]
+    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ stdlib("m2w64_c") }}    # [win]
+    - {{ compiler('m2w64_fortran') }}  # [win]
+    - m2-make  # [win]
+    - m2-which  # [win]
+    - m2w64-pkg-config  # [win]
+
   host:
     - setuptools
     - pip
