--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,8 @@ build:
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   script_env:
     - SKBUILD_CMAKE_ARGS=-DCMAKE_Fortran_COMPILER=gfortran  # [win]
-  skip: true  # [py==313]
+  # windows disabled due to cmake being unable to find a fortran compiler
+  skip: true  # [py==313 or win]
 
 requirements:
   build:
